--- a/DementiaHelper/DementiaHelper.WebApi/appsettings.json
+++ b/DementiaHelper/DementiaHelper.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=tcp:dementiahelper.database.windows.net,1433;Initial Catalog=dementiaHelperDB;Persist Security Info=False;User ID=dementiahelper;Password=Password_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
