added component xamarin.auth,  changed icons, added credservice

--- a/DementiaHelper/DementiaHelper.WebApi/project.json
+++ b/DementiaHelper/DementiaHelper.WebApi/project.json
@@ -27,6 +27,11 @@
 
   "frameworks": {
     "netcoreapp1.0": {
+      "dependencies": {
+        "DementiaHelper": {
+          "target": "project"
+        }
+      },
       "imports": [
         "dotnet5.6",
         "portable-net45+win8"
