--- a/DementiaHelper/DementiaHelper/DementiaHelper.Droid/DementiaHelper.Droid.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.Droid/DementiaHelper.Droid.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Services\CredentialsService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
