--- a/DementiaHelper/DementiaHelper.WebApi/project.fragment.lock.json
+++ b/DementiaHelper/DementiaHelper.WebApi/project.fragment.lock.json
@@ -10,11 +10,11 @@
       "runtime": {
         "../../packages/Microsoft.Net.Http.2.2.29/lib/portable-net40+sl4+win8+wp71+wpa81/System.Net.Http.Extensions.dll": {},
         "../../packages/Microsoft.Net.Http.2.2.29/lib/portable-net40+sl4+win8+wp71+wpa81/System.Net.Http.Primitives.dll": {},
-        "../../packages/Microsoft.Net.Http.2.2.29/lib/portable-net40+sl4+win8+wp71+wpa81/System.Net.Http.dll": {},
         "../../packages/Newtonsoft.Json.9.0.1/lib/portable-net45+wp80+win8+wpa81/Newtonsoft.Json.dll": {},
         "../../packages/Xamarin.Forms.2.3.3.180/lib/portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20/Xamarin.Forms.Core.dll": {},
         "../../packages/Xamarin.Forms.2.3.3.180/lib/portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20/Xamarin.Forms.Platform.dll": {},
         "../../packages/Xamarin.Forms.2.3.3.180/lib/portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20/Xamarin.Forms.Xaml.dll": {},
+        "C:/Program Files (x86)/Reference Assemblies/Microsoft/Framework/.NETPortable/v4.5/System.Net.Http.dll": {},
         "bin/Debug/DementiaHelper.dll": {}
       },
       "contentFiles": {
