--- a/DementiaHelper/DementiaHelper.WebApi/appsettings.json
+++ b/DementiaHelper/DementiaHelper.WebApi/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "JwtIssuerOptions": {
+    "Issuer": "DementiaHelperTokenServer",
+    "Audience": "http://localhost:29342/"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:dementiahelper.database.windows.net,1433;Initial Catalog=dementiaHelperDB;Persist Security Info=False;User ID=dementiahelper;Password=Password_1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
