--- a/DementiaHelper/DementiaHelper.WebApi/project.json
+++ b/DementiaHelper/DementiaHelper.WebApi/project.json
@@ -18,7 +18,10 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0-msbuild3-final",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+    "Microsoft.IdentityModel.Tokens": "5.1.3",
+    "System.IdentityModel.Tokens.Jwt": "5.1.0",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0"
   },
 
   "tools": {
