--- a/DementiaHelper/DementiaHelper.WebApi/project.json
+++ b/DementiaHelper/DementiaHelper.WebApi/project.json
@@ -24,7 +24,8 @@
     "System.IdentityModel.Tokens.Jwt": "5.1.0",
     "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
     "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0"
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
+    "JwtCore": "1.1.0"
   },
 
   "tools": {
