changed a couple of views added choosecitizen

--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -38,8 +38,24 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\BehaviorBase.cs" />
+    <Compile Include="Behaviors\EventToCommandBehavior.cs" />
+    <Compile Include="Converters\ItemTappedEventArgsConverter.cs" />
+    <Compile Include="Model\Citizen.cs" />
     <Compile Include="Model\UserInformation.cs" />
+    <Compile Include="PageModels\ChatPageModel.cs" />
+    <Compile Include="PageModels\ChooseCitizenPageModel.cs" />
+    <Compile Include="PageModels\ConnectToCitizenViewModel.cs" />
     <Compile Include="PageModels\EditAccountInformationPageModel.cs" />
+    <Compile Include="Pages\ChatPage.xaml.cs">
+      <DependentUpon>ChatPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ChooseCitizenPage.xaml.cs">
+      <DependentUpon>ChooseCitizenPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ConnectToCitizenPage.xaml.cs">
+      <DependentUpon>ConnectToCitizenPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Renders\CustomControlRenders\FacebookButtonCustomRender.cs" />
     <Compile Include="Renders\CustomControlRenders\GoogleButtonCustomRender.cs" />
     <Compile Include="Services\ICredentialsService.cs" />
@@ -79,6 +95,7 @@
       <DependentUpon>ContactListPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Extensions\TranslateExtension.cs" />
+    <Compile Include="Services\INativeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\MainPage.xaml">
@@ -166,6 +183,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\EditAccountInformationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ChatPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ConnectToCitizenPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ChooseCitizenPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
