--- a/DementiaHelper/DementiaHelper.WebApi/project.json
+++ b/DementiaHelper/DementiaHelper.WebApi/project.json
@@ -25,8 +25,7 @@
     "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
     "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
-    "JwtCore": "1.1.0"
-  },
+    "JwtCore": "1.1.0" },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
