--- a/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="xamarinios10" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfSchedule" version="15.1.0.41" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfSchedule.IOS" version="15.1.0.41" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="xamarinios10" />
 </packages>
