--- a/DementiaHelper/SignalR_Server/SignalR_Server.csproj
+++ b/DementiaHelper/SignalR_Server/SignalR_Server.csproj
@@ -101,6 +101,8 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+    <None Include="Properties\PublishProfiles\DementiaHelperChatHub - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\DementiaHelperChatHub - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -121,6 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatHub.cs" />
+    <Compile Include="GroupChatHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
