--- a/DementiaHelper/DementiaHelper/DementiaHelper.Droid/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.Droid/packages.config
@@ -3,6 +3,8 @@
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid71" />
+  <package id="Syncfusion.Xamarin.SfNumericUpDown" version="15.1.0.41" targetFramework="monoandroid71" />
+  <package id="Syncfusion.Xamarin.SfNumericUpDown.Android" version="15.1.0.41" targetFramework="monoandroid71" />
   <package id="Syncfusion.Xamarin.SfSchedule" version="15.1.0.41" targetFramework="monoandroid71" />
   <package id="Syncfusion.Xamarin.SfSchedule.Android" version="15.1.0.41" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid71" />
