--- a/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.iOS/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfNumericUpDown" version="15.1.0.41" targetFramework="xamarinios10" />
+  <package id="Syncfusion.Xamarin.SfNumericUpDown.IOS" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfSchedule" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Syncfusion.Xamarin.SfSchedule.IOS" version="15.1.0.41" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
