--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -38,6 +38,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Model\CalenderTask.cs" />
     <Compile Include="Model\GalleryImage.cs" />
     <Compile Include="Model\Message.cs" />
@@ -48,7 +49,7 @@
     <Compile Include="Model\Citizen.cs" />
     <Compile Include="Model\UserInformation.cs" />
     <Compile Include="PageModels\CalenderPageModel.cs" />
-    <Compile Include="PageModels\AddItem.cs" />
+    <Compile Include="PageModels\CreateShoppingItemPageModel.cs" />
     <Compile Include="PageModels\ChatPageModel.cs" />
     <Compile Include="PageModels\ChooseCitizenPageModel.cs" />
     <Compile Include="PageModels\CitizenHomePageModel.cs" />
@@ -56,11 +57,12 @@
     <Compile Include="PageModels\CreateCalenderAppointmentPageModel.cs" />
     <Compile Include="PageModels\EditAccountInformationPageModel.cs" />
     <Compile Include="PageModels\ImageGalleryPageModel.cs" />
+    <Compile Include="PageModels\SettingsPageModel.cs" />
     <Compile Include="Pages\CalenderPage.xaml.cs">
       <DependentUpon>CalenderPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AddItem.xaml.cs">
-      <DependentUpon>AddItem.xaml</DependentUpon>
+    <Compile Include="Pages\CreateShoppingItemPage.xaml.cs">
+      <DependentUpon>CreateShoppingItemPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\ChatPage.xaml.cs">
       <DependentUpon>ChatPage.xaml</DependentUpon>
@@ -80,10 +82,12 @@
     <Compile Include="Pages\ImageGalleryPage.xaml.cs">
       <DependentUpon>ImageGalleryPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Renders\CustomControlRenders\ColorPickerCustomRender.cs" />
+    <Compile Include="Renders\CustomControlRenders\CustomButtonRender.cs" />
     <Compile Include="Renders\CustomControlRenders\CustomImageGallery.cs" />
-    <Compile Include="Renders\CustomControlRenders\FacebookButtonCustomRender.cs" />
-    <Compile Include="Renders\CustomControlRenders\GoogleButtonCustomRender.cs" />
     <Compile Include="Services\ICredentialsService.cs" />
     <Compile Include="Services\IImageResize.cs" />
     <Compile Include="Services\JWTService.cs" />
@@ -116,7 +120,6 @@
       <DependentUpon>AppResources.da.resx</DependentUpon>
     </Compile>
     <Compile Include="Resx\ILocalize.cs" />
-    <Compile Include="PageModels\ClockViewModel.cs" />
     <Compile Include="Pages\ContactListPage.xaml.cs">
       <DependentUpon>ContactListPage.xaml</DependentUpon>
     </Compile>
@@ -163,6 +166,9 @@
     </Reference>
     <Reference Include="Plugin.Media.Abstractions, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xam.Plugin.Media.2.6.2\lib\portable-net45+wp80+win8+wpa81\Plugin.Media.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.SfNumericUpDown.XForms, Version=15.1451.0.41, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Syncfusion.Xamarin.SfNumericUpDown.15.1.0.41\lib\portable-win+net45+wp80+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Syncfusion.SfNumericUpDown.XForms.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.SfSchedule.XForms, Version=15.1451.0.41, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Syncfusion.Xamarin.SfSchedule.15.1.0.41\lib\portable-win+net45+wp80+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Syncfusion.SfSchedule.XForms.dll</HintPath>
@@ -275,7 +281,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Pages\AddItem.xaml">
+    <EmbeddedResource Include="Pages\CreateShoppingItemPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -292,8 +298,14 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-    <ItemGroup>
+  <ItemGroup>
     <Content Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
