--- a/DementiaHelper/DementiaHelper/DementiaHelper.iOS/DementiaHelper.iOS.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.iOS/DementiaHelper.iOS.csproj
@@ -94,6 +94,8 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Renders\CustomButtonRenderer.cs" />
+    <Compile Include="Services\CredentialsService.cs" />
+    <Compile Include="Services\ImageResizer.cs" />
     <Compile Include="Services\NativeService.cs" />
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
@@ -152,6 +154,9 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
+    <Reference Include="Xamarin.Auth.iOS">
+      <HintPath>..\..\Components\xamarin.auth-1.2.3.1\lib\ios-unified\Xamarin.Auth.iOS.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.4.224\lib\Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
