changed chatpage view

--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -38,6 +38,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Behaviors\ScrollToBottomBehavior.cs" />
     <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Model\CalenderTask.cs" />
     <Compile Include="Model\ChatMessage.cs" />
