--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Model\ApplicationUser.cs" />
     <Compile Include="Model\CalenderTask.cs" />
     <Compile Include="Model\ChatMessage.cs" />
+    <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\GalleryImage.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\ShoppingList.cs" />
