--- a/DementiaHelper/SignalR_Server/SignalR_Server.csproj
+++ b/DementiaHelper/SignalR_Server/SignalR_Server.csproj
@@ -147,6 +147,9 @@
     <Compile Include="Startup.cs" />
     <Compile Include="WebService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -158,7 +161,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>11306</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
