--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\GalleryImage.cs" />
     <Compile Include="Model\Message.cs" />
+    <Compile Include="Model\Note.cs" />
     <Compile Include="Model\ShoppingList.cs" />
     <Compile Include="Behaviors\BehaviorBase.cs" />
     <Compile Include="Behaviors\EventToCommandBehavior.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Model\UserInformation.cs" />
     <Compile Include="PageModels\CalenderPageModel.cs" />
     <Compile Include="PageModels\ConnectToCitizenPageModel.cs" />
+    <Compile Include="PageModels\ConnectToNursingHomePageModel.cs" />
     <Compile Include="PageModels\CreateShoppingItemPageModel.cs" />
     <Compile Include="PageModels\ChatPageModel.cs" />
     <Compile Include="PageModels\ChooseCitizenPageModel.cs" />
@@ -59,9 +61,13 @@
     <Compile Include="PageModels\CreateCalenderAppointmentPageModel.cs" />
     <Compile Include="PageModels\EditAccountInformationPageModel.cs" />
     <Compile Include="PageModels\ImageGalleryPageModel.cs" />
+    <Compile Include="PageModels\NotePageModel.cs" />
     <Compile Include="PageModels\SettingsPageModel.cs" />
     <Compile Include="Pages\CalenderPage.xaml.cs">
       <DependentUpon>CalenderPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ConnectToNursingHomePage.xaml.cs">
+      <DependentUpon>ConnectToNursingHomePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\CreateShoppingItemPage.xaml.cs">
       <DependentUpon>CreateShoppingItemPage.xaml</DependentUpon>
@@ -83,6 +89,9 @@
     </Compile>
     <Compile Include="Pages\ImageGalleryPage.xaml.cs">
       <DependentUpon>ImageGalleryPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\NotePage.xaml.cs">
+      <DependentUpon>NotePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
@@ -317,6 +326,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\ConnectToNursingHomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\NotePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
