--- a/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/DementiaHelper.csproj
@@ -127,13 +127,10 @@
     <Compile Include="Pages\WeekCalendarPage.xaml.cs">
       <DependentUpon>WeekCalendarPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Renders\CustomControlRenders\ColorPickerCustomRender.cs" />
     <Compile Include="Renders\CustomControlRenders\CustomButtonRender.cs" />
     <Compile Include="Renders\CustomControlRenders\CustomImageGallery.cs" />
-    <Compile Include="Renders\ChatListView.cs" />
-    <Compile Include="Renders\CustomControlRenders\CustomMasterDetailNavigation.cs" />
+    <Compile Include="Extensions\CustomMasterDetailNavigation.cs" />
     <Compile Include="Renders\CustomControlRenders\ToggleButton.cs" />
-    <Compile Include="Renders\MessageViewCell.cs" />
     <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\IChatService.cs" />
     <Compile Include="Services\ICredentialsService.cs" />
