Fixed minor bugs and text strings. Remember to change NumericUpDown before deploying to IOS

--- a/DementiaHelper/DementiaHelper/DementiaHelper.iOS/Info.plist
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.iOS/Info.plist
@@ -23,13 +23,16 @@
 	<key>MinimumOSVersion</key>
 	<string>10.3</string>
 	<key>CFBundleDisplayName</key>
-	<string>DementiaHelper</string>
+	<string>CuraCivis</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.yourcompany.DementiaHelper</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleIconFiles</key>
 	<array>
+		<string>Icon-72@2x.png</string>
+		<string>Icon-72.png</string>
+		<string>Icon@2x.png</string>
 		<string>Icon-60@2x.png</string>
 		<string>Icon-76.png</string>
 		<string>Icon-76@2x.png</string>
@@ -38,6 +41,8 @@
 		<string>Default-568h@2x.png</string>
 		<string>Default-Portrait.png</string>
 		<string>Default-Portrait@2x.png</string>
+		<string>Icon-Small-50@2x.png</string>
+		<string>Icon-Small-50.png</string>
 		<string>Icon-Small-40.png</string>
 		<string>Icon-Small-40@2x.png</string>
 		<string>Icon-Small.png</string>
@@ -47,5 +52,21 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
 	<string></string>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleBlack</string>
+			<key>Translucent</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>LaunchScreen</string>
+	<key>UIPrerenderedIcon</key>
+	<false/>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
